--- a/libraryManagment/src/main/resources/application.properties
+++ b/libraryManagment/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
 
-spring.datasource.url=jdbc:mysql:/localhost:3306/library
+spring.datasource.url=jdbc:mysql://localhost:3306/library
 spring.datasource.username=root
 spring.datasource.password=m.r.a.d.2001
-spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.thymeleaf.cache=false
