--- a/libraryManagment/src/main/resources/application.properties
+++ b/libraryManagment/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=m.r.a.d.2001
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.thymeleaf.cache=false
+spring.mvc.hiddenmethod.filter.enabled = true
+server.error.whitelabel.enabled=true
