--- a/libraryManagment/src/main/resources/application.properties
+++ b/libraryManagment/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/library
 spring.datasource.username=root
 spring.datasource.password=m.r.a.d.2001
 
-spring.jpa.show-sql=false
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.thymeleaf.cache=false
 spring.mvc.hiddenmethod.filter.enabled = true
